extends Node2D

signal window_closed

@onready var texture_rect = $TextureRect
@onready var left_slots = [
	$TextureRect/MainContainer/LeftGrid/LeftSlot1,
	$TextureRect/MainContainer/LeftGrid/LeftSlot2,
	$TextureRect/MainContainer/LeftGrid/LeftSlot3,
	$TextureRect/MainContainer/LeftGrid/LeftSlot4,
	$TextureRect/MainContainer/LeftGrid/LeftSlot5
]
@onready var right_slots = [
	$TextureRect/MainContainer/RightGrid/RightSlot1,
	$TextureRect/MainContainer/RightGrid/RightSlot2,
	$TextureRect/MainContainer/RightGrid/RightSlot3,
	$TextureRect/MainContainer/RightGrid/RightSlot4,
	$TextureRect/MainContainer/RightGrid/RightSlot5
]
@onready var arrows = [
	$TextureRect/ArrowGrid/Arrow1,
	$TextureRect/ArrowGrid/Arrow2,
	$TextureRect/ArrowGrid/Arrow3,
	$TextureRect/ArrowGrid/Arrow4,
	$TextureRect/ArrowGrid/Arrow5
]
@onready var close_button: Button = $TextureRect/BottomPanel/CloseButton
@onready var currency_label: Label = $TextureRect/BottomPanel/StatsPanel/CurrencyLabel
@onready var crystals_label: Label = $TextureRect/BottomPanel/StatsPanel/CrystalsLabel
@onready var trash_icon: TextureRect = $TextureRect/BottomPanel/StatsPanel/TrashIcon
@onready var crystal_icon: TextureRect = $TextureRect/BottomPanel/StatsPanel/CrystalIcon

# –¢–æ–≤–∞—Ä—ã NPC
var npc_items = []
var player_currency: int = 0
var player_crystals: int = 0
var player_node: Node = null

func _ready():
	if close_button:
		close_button.pressed.connect(_on_close_button_pressed)
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª—ã –¥–ª—è –í–°–ï–• —Å–ª–æ—Ç–æ–≤
	for i in range(left_slots.size()):
		var slot = left_slots[i]
		if slot and slot.has_signal("slot_clicked"):
			slot.slot_clicked.connect(_on_slot_clicked)
			print("‚úÖ –ü–æ–¥–∫–ª—é—á–µ–Ω –ª–µ–≤—ã–π —Å–ª–æ—Ç", i+1)
	
	for i in range(right_slots.size()):
		var slot = right_slots[i]
		if slot and slot.has_signal("slot_clicked"):
			slot.slot_clicked.connect(_on_slot_clicked)
			print("‚úÖ –ü–æ–¥–∫–ª—é—á–µ–Ω –ø—Ä–∞–≤—ã–π —Å–ª–æ—Ç", i+1)
	
	# –ó–∞–≥—Ä—É–∂–∞–µ–º —Ç–æ–≤–∞—Ä—ã –∏–∑ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –ò–õ–ò –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é
	_load_npc_items_from_save()
	
	# –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –≤—Å–µ –∫–∞–∫ –Ω–µ–≤–∏–¥–∏–º—ã–µ
	for slot in left_slots + right_slots:
		if slot:
			slot.visible = false
	
	for arrow in arrows:
		if arrow:
			arrow.visible = false
	
	hide()

func setup(player_data: Dictionary):
	player_currency = player_data.get("currency", 0)
	player_crystals = player_data.get("crystals", 0)
	player_node = player_data.get("player_node", null)
	
	# –û–ë–ù–û–í–õ–Ø–ï–ú –°–¢–ê–¢–ò–°–¢–ò–ö–£ –í –û–ö–ù–ï
	_update_currency_display()
	_load_items()
	_position_at_player_camera()
	show()
	
	print("üí∞ –û–∫–Ω–æ —Ç–æ—Ä–≥–æ–≤–ª–∏: Trash =", player_currency, ", Crystals =", player_crystals)

func _load_npc_items_from_save():
	# –°—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–µ —Ç–æ–≤–∞—Ä—ã –µ—Å–ª–∏ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è –Ω–µ—Ç
	var default_items = [
		{"name": "RingOfHealth", "price": 300, "currency": "Trash", "icon": "RingOfHealth"},
		{"name": "RingOfDamage", "price": 450, "currency": "Trash", "icon": "RingOfDamage"},
		{"name": "RingOfBalance", "price": 3, "currency": "Crystal", "icon": "RingOfBalance"},
		{"name": "RingOfSpeed", "price": 600, "currency": "Trash", "icon": "RingOfSpeed"},
		{"name": "RingOfSwiftStrike", "price": 5, "currency": "Crystal", "icon": "RingOfSwiftStrike"}
	]
	
	npc_items = default_items.duplicate(true)
	
	# –ü—ã—Ç–∞–µ–º—Å—è –∑–∞–≥—Ä—É–∑–∏—Ç—å –∏–∑ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è
	if save_system and save_system.save_data.has("npc_items_trader"):
		var saved_items = save_system.save_data["npc_items_trader"]
		if saved_items is Array and saved_items.size() == default_items.size():
			npc_items = saved_items.duplicate(true)
			print("‚úÖ –¢–æ–≤–∞—Ä—ã —Ç–æ—Ä–≥–æ–≤—Ü–∞ –∑–∞–≥—Ä—É–∂–µ–Ω—ã –∏–∑ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è")
		else:
			print("‚ö†Ô∏è –ù–µ–∫–æ—Ä—Ä–µ–∫—Ç–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ —Ç–æ–≤–∞—Ä–æ–≤ –≤ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–∏, –∏—Å–ø–æ–ª—å–∑—É–µ–º —Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–µ")
	else:
		print("‚ÑπÔ∏è –¢–æ–≤–∞—Ä—ã —Ç–æ—Ä–≥–æ–≤—Ü–∞ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã –≤ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏–∏, –∏—Å–ø–æ–ª—å–∑—É–µ–º —Å—Ç–∞–Ω–¥–∞—Ä—Ç–Ω—ã–µ")
	
	# –ü—Ä–æ–≤–µ—Ä—è–µ–º –∫—É–ø–ª–µ–Ω–Ω—ã–µ –ø—Ä–µ–¥–º–µ—Ç—ã –∏ —É–¥–∞–ª—è–µ–º –∏—Ö
	if save_system and save_system.save_data.has("purchased_items"):
		var purchased_items = save_system.save_data["purchased_items"]
		for i in range(npc_items.size()):
			var item_name = npc_items[i]["name"]
			if item_name != "" and purchased_items.get(item_name, false):
				print("‚ÑπÔ∏è", item_name, " —É–∂–µ –∫—É–ø–ª–µ–Ω, —É–¥–∞–ª—è–µ–º –∏–∑ –∞—Å—Å–æ—Ä—Ç–∏–º–µ–Ω—Ç–∞")
				npc_items[i] = {"name": "", "price": 0, "currency": "", "icon": ""}

func _position_at_player_camera():
	var player = player_node if player_node else get_tree().get_first_node_in_group("players")
	if not player:
		return
	var camera = player.get_node_or_null("Camera2D")
	if not camera:
		return

	# –ü–æ–ª—É—á–∞–µ–º —Ç–µ–∫—É—â–∏–π –≤–∏–¥ –∫–∞–º–µ—Ä—ã
	var camera_center = camera.get_screen_center_position() if camera.has_method("get_screen_center_position") else camera.global_position
	
	# –£–ú–ï–ù–¨–®–ê–ï–ú –û–†–ò–ì–ò–ù–ê–õ–¨–ù–´–ô –†–ê–ó–ú–ï–† –û–ö–ù–ê –ù–ê 150 –ü–ò–ö–°–ï–õ–ï–ô
	# –ò—Å—Ö–æ–¥–Ω—ã–π —Ä–∞–∑–º–µ—Ä –æ–∫–Ω–∞ (800x600) —É–º–µ–Ω—å—à–∞–µ–º –Ω–∞ 150 –ø–∏–∫—Å–µ–ª–µ–π
	var original_window_size = Vector2(650, 450)  # –ë—ã–ª–æ 800x600, —Å—Ç–∞–ª–æ 650x450
	
	# –ü—Ä–æ—Å—Ç–æ–π —Ñ–∏–∫—Å–∏—Ä–æ–≤–∞–Ω–Ω—ã–π –º–∞—Å—à—Ç–∞–± 0.6 (–≤–º–µ—Å—Ç–æ 0.5)
	var scale_ratio = 0.53
	texture_rect.scale = Vector2(scale_ratio, scale_ratio)
	
	# –ü–æ–ª—É—á–∞–µ–º –Ω–æ–≤—ã–π —Ä–∞–∑–º–µ—Ä –æ–∫–Ω–∞ —Å —É—á–µ—Ç–æ–º –º–∞—Å—à—Ç–∞–±–∞
	var scaled_window_size = original_window_size * scale_ratio
	
	# –ü–æ–∑–∏—Ü–∏–æ–Ω–∏—Ä—É–µ–º –æ–∫–Ω–æ –ø–æ —Ü–µ–Ω—Ç—Ä—É –∫–∞–º–µ—Ä—ã, –ù–û –ü–û–î–ù–ò–ú–ê–ï–ú –ù–ê 100 –ü–ò–ö–°–ï–õ–ï–ô –í–í–ï–†–•
	texture_rect.position = camera_center - (scaled_window_size / 2) - Vector2(0, 180)
	
	print("üìê –ü–æ–∑–∏—Ü–∏—è –æ–∫–Ω–∞ —Ç–æ—Ä–≥–æ–≤–ª–∏:")
	print("  –¶–µ–Ω—Ç—Ä –∫–∞–º–µ—Ä—ã:", camera_center)
	print("  –û—Ä–∏–≥–∏–Ω–∞–ª—å–Ω—ã–π —Ä–∞–∑–º–µ—Ä:", original_window_size)
	print("  –ú–∞—Å—à—Ç–∞–±:", scale_ratio)
	print("  –§–∏–Ω–∞–ª—å–Ω—ã–π —Ä–∞–∑–º–µ—Ä:", scaled_window_size)
	print("  –ü–æ–∑–∏—Ü–∏—è –æ–∫–Ω–∞ (—Å –ø–æ–¥—ä–µ–º–æ–º –Ω–∞ 100 –ø–∏–∫—Å–µ–ª–µ–π):", texture_rect.position)

func _update_currency_display():
	# –û–ë–ù–û–í–õ–Ø–ï–ú –õ–ï–ô–ë–õ–´ –ò –ò–ö–û–ù–ö–ò –í STATSPANEL
	if currency_label:
		currency_label.text = str(player_currency)
	
	if crystals_label:
		crystals_label.text = str(player_crystals)
	
	# –ó–ê–ì–†–£–ñ–ê–ï–ú –ò–ö–û–ù–ö–ò –î–õ–Ø STATSPANEL
	if trash_icon:
		var trash_texture = load("res://assets/Items_icon/trash.png")
		if trash_texture:
			trash_icon.texture = trash_texture
			trash_icon.visible = true
		else:
			# –°–æ–∑–¥–∞–µ–º –ø—Ä–æ—Å—Ç—É—é –∏–∫–æ–Ω–∫—É
			var image = Image.create(32, 32, false, Image.FORMAT_RGBA8)
			image.fill(Color(0.6, 0.4, 0.1))
			var tex = ImageTexture.create_from_image(image)
			trash_icon.texture = tex
			trash_icon.visible = true
	
	if crystal_icon:
		var crystal_texture = load("res://assets/Items_icon/crystal.png")
		if crystal_texture:
			crystal_icon.texture = crystal_texture
			crystal_icon.visible = true
		else:
			# –°–æ–∑–¥–∞–µ–º –ø—Ä–æ—Å—Ç—É—é –∏–∫–æ–Ω–∫—É
			var image = Image.create(32, 32, false, Image.FORMAT_RGBA8)
			image.fill(Color(0.2, 0.7, 0.9))
			var tex = ImageTexture.create_from_image(image)
			crystal_icon.texture = tex
			crystal_icon.visible = true

func _load_items():
	# –û—á–∏—â–∞–µ–º –≤–∏–¥–∏–º–æ—Å—Ç—å –≤—Å–µ–≥–æ
	for slot in left_slots + right_slots:
		if slot:
			slot.visible = false
	
	for arrow in arrows:
		if arrow:
			arrow.visible = false
			arrow.scale = Vector2(0.5, 0.5)
	
	for i in range(left_slots.size()):
		var item = npc_items[i]
		var left = left_slots[i]
		var right = right_slots[i]
		var arrow = arrows[i]
		
		# –ï—Å–ª–∏ –ø—Ä–µ–¥–º–µ—Ç —Å—É—â–µ—Å—Ç–≤—É–µ—Ç - –ø–æ–∫–∞–∑—ã–≤–∞–µ–º —Å—Ç—Ä–æ–∫—É
		if item["name"] != "":
			# –õ–µ–≤—ã–π —Å–ª–æ—Ç (–ø—Ä–µ–¥–º–µ—Ç)
			if left and left.has_method("set_data"):
				left.set_data(i, item["name"], 1, 0, item["icon"])
				left.visible = true
				# –í–∫–ª—é—á–∞–µ–º –∫–ª–∏–∫–∞–±–µ–ª—å–Ω–æ—Å—Ç—å –¥–ª—è –ª–µ–≤—ã—Ö —Å–ª–æ—Ç–æ–≤
				if left.has_method("set_clickable"):
					left.set_clickable(true)
			
			# –ü—Ä–∞–≤—ã–π —Å–ª–æ—Ç (–≤–∞–ª—é—Ç–∞)
			if right and right.has_method("set_data"):
				# –û–ø—Ä–µ–¥–µ–ª—è–µ–º –∏–∫–æ–Ω–∫—É –≤–∞–ª—é—Ç—ã
				var currency_icon = ""
				if item["currency"] == "Trash":
					currency_icon = "trash"
				elif item["currency"] == "Crystal":
					currency_icon = "crystal"
				
				# –ü–µ—Ä–µ–¥–∞–µ–º –¥–∞–Ω–Ω—ã–µ –¥–ª—è –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏—è
				right.set_data(i, item["currency"], item["price"], 0, currency_icon)
				right.visible = true
				# –û—Ç–∫–ª—é—á–∞–µ–º –∫–ª–∏–∫–∞–±–µ–ª—å–Ω–æ—Å—Ç—å –¥–ª—è –ø—Ä–∞–≤—ã—Ö —Å–ª–æ—Ç–æ–≤
				if right.has_method("set_clickable"):
					right.set_clickable(false)
			
			# –°—Ç—Ä–µ–ª–∫–∞
			if arrow and left and right:
				arrow.visible = true
				var left_pos = left.global_position if left.visible else Vector2.ZERO
				var right_pos = right.global_position if right.visible else Vector2.ZERO
				
				if left.visible and right.visible:
					arrow.global_position = (left_pos + right_pos) / 2
					arrow.global_position -= arrow.size * arrow.scale / 2
		else:
			# –ü—É—Å—Ç–æ–π —Å–ª–æ—Ç - —Å–∫—Ä—ã–≤–∞–µ–º –≤—Å—ë
			if left:
				left.set_data(i, "", 0, 0, "")
				left.visible = false
			if right:
				right.set_data(i, "", 0, 0, "")
				right.visible = false
			if arrow:
				arrow.visible = false

func _on_slot_clicked(slot_index: int, item_name: String, item_amount: int):
	print("üñ±Ô∏è –ö–ª–∏–∫ –Ω–∞ —Å–ª–æ—Ç–µ", slot_index, ":", item_name)
	
	# –ù–ï –î–ê–ï–ú –ö–õ–ò–ö–ê–¢–¨ –ù–ê –í–ê–õ–Æ–¢–£ (Trash/Crystal)
	if item_name == "Trash" or item_name == "Crystal" or item_name == "":
		print("‚ö†Ô∏è –ö–ª–∏–∫ –Ω–∞ –≤–∞–ª—é—Ç–µ –∏–ª–∏ –ø—É—Å—Ç–æ–º —Å–ª–æ—Ç–µ - –∏–≥–Ω–æ—Ä–∏—Ä—É–µ–º")
		return

	# –ò—â–µ–º —Ç–æ–≤–∞—Ä –ø–æ –∏–º–µ–Ω–∏ –≤ npc_items
	var item_index = -1
	var item = null
	
	for i in range(npc_items.size()):
		if npc_items[i]["name"] == item_name:
			item_index = i
			item = npc_items[i]
			break
	
	if item_index == -1 or item == null:
		print("‚ùå –¢–æ–≤–∞—Ä –Ω–µ –Ω–∞–π–¥–µ–Ω –≤ npc_items:", item_name)
		return
	
	var price = item["price"]
	var currency_type = item["currency"]
	
	print("üõí –ü–æ–∫—É–ø–∫–∞:", item_name, " –∑–∞", price, currency_type)

	if currency_type == "Trash":
		if player_currency < price:
			print("‚ùå –ù–µ–¥–æ—Å—Ç–∞—Ç–æ—á–Ω–æ Trash! –ù—É–∂–Ω–æ:", price, " –µ—Å—Ç—å:", player_currency)
			return
		player_currency -= price
		# –û–±–Ω–æ–≤–ª—è–µ–º –≤–∞–ª—é—Ç—É —É –∏–≥—Ä–æ–∫–∞
		if player_node:
			player_node.currency = player_currency
			if player_node.has_signal("currency_changed"):
				player_node.emit_signal("currency_changed", player_currency)
	elif currency_type == "Crystal":
		if player_crystals < price:
			print("‚ùå –ù–µ–¥–æ—Å—Ç–∞—Ç–æ—á–Ω–æ Crystals! –ù—É–∂–Ω–æ:", price, " –µ—Å—Ç—å:", player_crystals)
			return
		player_crystals -= price
		if PlayerInventory:
			PlayerInventory.spend_crystals(price)

	# –ü–æ–∫—É–ø–∞–µ–º —Ç–∞–ª–∏—Å–º–∞–Ω
	if PlayerInventory and PlayerInventory.add_talisman(item_name):
		print("‚úÖ –ö—É–ø–ª–µ–Ω–æ:", item_name, " –¥–æ–±–∞–≤–ª–µ–Ω–æ –≤ –∏–Ω–≤–µ–Ω—Ç–∞—Ä—å")
		
		# –°–û–•–†–ê–ù–Ø–ï–ú –î–ê–ù–ù–´–ï:
		# 1. –ü–æ–º–µ—á–∞–µ–º –∫–∞–∫ –∫—É–ø–ª–µ–Ω–Ω—ã–π
		if save_system:
			if not save_system.save_data.has("purchased_items"):
				save_system.save_data["purchased_items"] = {}
			save_system.save_data["purchased_items"][item_name] = true
			print("üíæ –ü–æ–∫—É–ø–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∞ –≤ purchased_items:", item_name)
		
		# 2. –û–±–Ω–æ–≤–ª—è–µ–º –∞—Å—Å–æ—Ä—Ç–∏–º–µ–Ω—Ç —Ç–æ—Ä–≥–æ–≤—Ü–∞ (—É–¥–∞–ª—è–µ–º –∫—É–ø–ª–µ–Ω–Ω—ã–π —Ç–æ–≤–∞—Ä)
		npc_items[item_index] = {"name": "", "price": 0, "currency": "", "icon": ""}
		
		# 3. –°–æ—Ö—Ä–∞–Ω—è–µ–º –æ–±–Ω–æ–≤–ª–µ–Ω–Ω—ã–π –∞—Å—Å–æ—Ä—Ç–∏–º–µ–Ω—Ç
		if save_system:
			save_system.save_data["npc_items_trader"] = npc_items.duplicate(true)
			print("üíæ –ê—Å—Å–æ—Ä—Ç–∏–º–µ–Ω—Ç —Ç–æ—Ä–≥–æ–≤—Ü–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω")
		
		# 4. –°–æ—Ö—Ä–∞–Ω—è–µ–º –∏–Ω–≤–µ–Ω—Ç–∞—Ä—å
		if PlayerInventory:
			var inventory_data = PlayerInventory.save_inventory_data()
			if save_system:
				save_system.save_data["inventory_data"] = inventory_data
				print("üíæ –ò–Ω–≤–µ–Ω—Ç–∞—Ä—å —Å–æ—Ö—Ä–∞–Ω–µ–Ω")
		
		# 5. –°–æ—Ö—Ä–∞–Ω—è–µ–º –≤—Å—é –∏–≥—Ä—É
		if save_system and player_node:
			save_system.save_game(player_node)
			print("üíæ –ò–≥—Ä–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∞ –ø–æ–ª–Ω–æ—Å—Ç—å—é")
		
		# –û–±–Ω–æ–≤–ª—è–µ–º –æ—Ç–æ–±—Ä–∞–∂–µ–Ω–∏–µ
		_update_currency_display()
		_load_items()  # –æ–±–Ω–æ–≤–ª—è–µ–º —Å–ª–æ—Ç—ã –∏ —Å—Ç—Ä–µ–ª–∫–∏
		
		print("üéâ –ü–æ–∫—É–ø–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∞ –∏ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∞!")
	else:
		print("‚ùå –ù–µ —É–¥–∞–ª–æ—Å—å –¥–æ–±–∞–≤–∏—Ç—å —Ç–∞–ª–∏—Å–º–∞–Ω –≤ –∏–Ω–≤–µ–Ω—Ç–∞—Ä—å")

func _on_close_button_pressed():
	print("üõí –ó–∞–∫—Ä—ã–≤–∞—é TradeWindow")
	window_closed.emit()
	queue_free()

func _input(event):
	if event.is_action_pressed("ui_cancel") and visible:
		_on_close_button_pressed()
		get_viewport().set_input_as_handled()
		
